--- a/assets/style.css
+++ b/assets/style.css
@@ -6,3 +6,15 @@
   width: 100%;
   height: 100%;
 }
+
+#rankAlert {
+  position: fixed;
+  top: -80px;
+  left: 30px;
+  opacity: 0;
+  transition: all 1.5s ease;
+}
+#rankAlert.showRank {
+  top: 30px;
+  opacity: 1;
+}
