--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,21 @@
-#carouselAlbums {
-  height: 300px;
-  width: 300px;
+.carousel-item-next,
+.carousel-inner,
+.carousel-item-start,
+.carousel-item {
+  height: 400px;
+  width: 400px;
 }
+
+@media screen and (max-width: 350px) {
+  .carousel-item-next,
+  .carousel-inner,
+  .carousel-item-start,
+  .carousel-item {
+    height: 300px;
+    width: 300px;
+  }
+}
+
 #carouselAlbums img {
   width: 100%;
   height: 100%;
